--- a/index.html
+++ b/index.html
@@ -1,7 +1,30 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
           "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+<!--
+   index.html - html for starship game.  See js/starship.js for the
+   game code.
+
+   Copyright (c) 2010 Robin Norwood <robin.norwood@gmail.com>
+
+      This file is part of Starship.
+
+    Starship is free software: you can redistribute it and/or modify
+    it under the terms of the GNU General Public License as published by
+    the Free Software Foundation, either version 3 of the License, or
+    (at your option) any later version.
+
+    Starship is distributed in the hope that it will be useful,
+    but WITHOUT ANY WARRANTY; without even the implied warranty of
+    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+    GNU General Public License for more details.
+
+    You should have received a copy of the GNU General Public License
+    along with Starship.  If not, see <http://www.gnu.org/licenses/>.
+
+ */
+
+-->
   <head>
     <meta name="Description" content="Starship game"/>
     <link href="css/starship.css" rel="stylesheet" type="text/css"/>
@@ -9,8 +32,10 @@
     <title>Starship</title>
     <script type="text/javascript" src="js/jquery/jquery-1.4.2.js"></script>
     <script type="text/javascript" src="js/jquery/jquery.ba-dotimeout.js"></script>
+    <script type="text/javascript" src="js/helpers.js"</script>
     <script type="text/javascript" src="js/entities.js"</script>
     <script type="text/javascript" src="js/stars.js"</script>
+    <script type="text/javascript" src="js/bullet.js"</script>
     <script type="text/javascript" src="js/targets.js"</script>
     <script type="text/javascript" src="js/ship.js"</script>
     <script type="text/javascript" src="js/starship.js"</script>
