--- a/index.html
+++ b/index.html
@@ -21,9 +21,6 @@
 
     You should have received a copy of the GNU General Public License
     along with Starship.  If not, see <http://www.gnu.org/licenses/>.
-
- */
-
 -->
   <head>
     <meta name="Description" content="Starship game"/>
@@ -38,9 +35,10 @@
     <script type="text/javascript" src="js/bullet.js"</script>
     <script type="text/javascript" src="js/targets.js"</script>
     <script type="text/javascript" src="js/ship.js"</script>
+    <script type="text/javascript" src="js/message.js"</script>
     <script type="text/javascript" src="js/starship.js"</script>
   </head>
   <body>
-    <canvas id="starship-canvas"></canvas>
+    <canvas id="starship-canvas">This demo only works on browsers that support the HTML5 canvas attribute.</canvas>
   </body>
 </html>
