Audio support, with a single sound effect.

--- a/index.html
+++ b/index.html
@@ -36,9 +36,14 @@
     <script type="text/javascript" src="js/targets.js"</script>
     <script type="text/javascript" src="js/ship.js"</script>
     <script type="text/javascript" src="js/message.js"</script>
+    <script type="text/javascript" src="js/audio.js"</script>
     <script type="text/javascript" src="js/starship.js"</script>
   </head>
   <body>
+    <!-- Preload audio -->
+    <audio class="sound" id="bullet_shot" src="sounds/74395__Benboncan__Ricochet_3.wav" autobuffer="autobuffer"></audio>
+    <!-- Done preloading audio -->
+
     <canvas id="starship-canvas">This demo only works on browsers that support the HTML5 canvas attribute.</canvas>
   </body>
 </html>
