--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
   <body>
     <!-- Preload audio -->
     <audio class="sound" id="bullet_shot" src="sounds/74395__Benboncan__Ricochet_3.wav" autobuffer="autobuffer"></audio>
+    <audio class="sound" id="shatter" src="sounds/41348__datasoundsample__glass_shatter.wav" autobuffer="autobuffer"></audio>
     <!-- Done preloading audio -->
 
     <canvas id="starship-canvas">This demo only works on browsers that support the HTML5 canvas attribute.</canvas>
