Fix horrible invalid html

--- a/index.html
+++ b/index.html
@@ -28,15 +28,15 @@
     <title>Starship</title>
     <script type="text/javascript" src="js/jquery/jquery-1.4.2.js"></script>
     <script type="text/javascript" src="js/jquery/jquery.ba-dotimeout.js"></script>
-    <script type="text/javascript" src="js/helpers.js"</script>
-    <script type="text/javascript" src="js/entities.js"</script>
-    <script type="text/javascript" src="js/stars.js"</script>
-    <script type="text/javascript" src="js/bullet.js"</script>
-    <script type="text/javascript" src="js/targets.js"</script>
-    <script type="text/javascript" src="js/ship.js"</script>
-    <script type="text/javascript" src="js/message.js"</script>
-    <script type="text/javascript" src="js/audio.js"</script>
-    <script type="text/javascript" src="js/starship.js"</script>
+    <script type="text/javascript" src="js/helpers.js"></script>
+    <script type="text/javascript" src="js/entities.js"></script>
+    <script type="text/javascript" src="js/stars.js"></script>
+    <script type="text/javascript" src="js/bullet.js"></script>
+    <script type="text/javascript" src="js/targets.js"></script>
+    <script type="text/javascript" src="js/ship.js"></script>
+    <script type="text/javascript" src="js/message.js"></script>
+    <script type="text/javascript" src="js/audio.js"></script>
+    <script type="text/javascript" src="js/starship.js"></script>
   </head>
   <body>
     <!-- Preload audio -->
