--- a/index.html
+++ b/index.html
@@ -40,9 +40,23 @@
   </head>
   <body>
     <!-- Preload audio -->
-    <audio class="sound" id="bullet_shot" src="sounds/74395__Benboncan__Ricochet_3.wav" autobuffer="autobuffer"></audio>
-    <audio class="sound" id="shatter" src="sounds/41348__datasoundsample__glass_shatter.wav" autobuffer="autobuffer"></audio>
+    <!-- See sounds/attrib.txt -->
+    <audio class="sound" id="bullet_shot" src="sounds/74395__Benboncan__Ricochet_3.wav" preload="auto"></audio>
+    <audio class="sound" id="shatter" src="sounds/41348__datasoundsample__glass_shatter.wav" preload="auto"></audio>
     <!-- Done preloading audio -->
+
+    <!-- Music -->
+    <!-- See music/License.txt -->
+    <audio class="sound music" id="01_Merlaska" src="music/01 - Merlaska.ogg" preload="meta"></audio>
+    <audio class="sound music" id="02_Denilio" src="music/02 - Denilio.ogg" preload="meta"></audio>
+    <audio class="sound music" id="03_Exariam" src="music/03 - Exariam.ogg" preload="meta"></audio>
+    <audio class="sound music" id="04_Sindomine" src="music/04 - Sindomine.ogg" preload="meta"></audio>
+    <audio class="sound music" id="05_Arneia" src="music/05 - Arneia.ogg" preload="meta"></audio>
+    <audio class="sound music" id="06_Farlem" src="music/06 - Farlem.ogg" preload="meta"></audio>
+    <audio class="sound music" id="07_Randoma" src="music/07 - Randoma.ogg" preload="meta"></audio>
+    <audio class="sound music" id="08_Nuevia" src="music/08 - Nuevia.ogg" preload="meta"></audio>
+    <audio class="sound music" id="09_Isundo" src="music/09 - Isundo.ogg" preload="meta"></audio>
+    <!-- Done with music -->
 
     <canvas id="starship-canvas">This demo only works on browsers that support the HTML5 canvas attribute.</canvas>
   </body>
