Mute audio, and add a loading delay.

--- a/index.html
+++ b/index.html
@@ -48,14 +48,14 @@
     <!-- Music -->
     <!-- See music/License.txt -->
     <audio class="sound music" id="01_Merlaska" src="music/01 - Merlaska.ogg" preload="meta"></audio>
-    <audio class="sound music" id="02_Denilio" src="music/02 - Denilio.ogg" preload="meta"></audio>
-    <audio class="sound music" id="03_Exariam" src="music/03 - Exariam.ogg" preload="meta"></audio>
-    <audio class="sound music" id="04_Sindomine" src="music/04 - Sindomine.ogg" preload="meta"></audio>
-    <audio class="sound music" id="05_Arneia" src="music/05 - Arneia.ogg" preload="meta"></audio>
-    <audio class="sound music" id="06_Farlem" src="music/06 - Farlem.ogg" preload="meta"></audio>
-    <audio class="sound music" id="07_Randoma" src="music/07 - Randoma.ogg" preload="meta"></audio>
-    <audio class="sound music" id="08_Nuevia" src="music/08 - Nuevia.ogg" preload="meta"></audio>
-    <audio class="sound music" id="09_Isundo" src="music/09 - Isundo.ogg" preload="meta"></audio>
+    <audio class="sound music" id="02_Denilio" src="music/02 - Denilio.ogg" preload="none"></audio>
+    <audio class="sound music" id="03_Exariam" src="music/03 - Exariam.ogg" preload="none"></audio>
+    <audio class="sound music" id="04_Sindomine" src="music/04 - Sindomine.ogg" preload="none"></audio>
+    <audio class="sound music" id="05_Arneia" src="music/05 - Arneia.ogg" preload="none"></audio>
+    <audio class="sound music" id="06_Farlem" src="music/06 - Farlem.ogg" preload="none"></audio>
+    <audio class="sound music" id="07_Randoma" src="music/07 - Randoma.ogg" preload="none"></audio>
+    <audio class="sound music" id="08_Nuevia" src="music/08 - Nuevia.ogg" preload="none"></audio>
+    <audio class="sound music" id="09_Isundo" src="music/09 - Isundo.ogg" preload="none"></audio>
     <!-- Done with music -->
 
     <canvas id="starship-canvas">This demo only works on browsers that support the HTML5 canvas attribute.</canvas>
