Fix muting bug, finally.

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <!-- Done preloading audio -->
 
     <!-- Music -->
-    <!-- See music/License.txt -->
+    <!-- See music/attrib.txt -->
     <audio class="sound music" id="01_Merlaska" src="music/01 - Merlaska.ogg" preload="meta"></audio>
     <audio class="sound music" id="02_Denilio" src="music/02 - Denilio.ogg" preload="none"></audio>
     <audio class="sound music" id="03_Exariam" src="music/03 - Exariam.ogg" preload="none"></audio>
