--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
 
     <!-- Preload audio -->
     <!-- See sounds/attrib.txt -->
+    <!-- Put sound effect and other short audio in starship.appcache
+    so browsers cache it properly -->
     <audio class="sound" id="bullet_shot" src="sounds/74395__Benboncan__Ricochet_3.wav" preload="auto"></audio>
     <audio class="sound" id="shatter" src="sounds/41348__datasoundsample__glass_shatter.wav" preload="auto"></audio>
     <!-- Done preloading audio -->
