Do not use appcache, as it's deprecated

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en" manifest="starship.appcache">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <!--
    index.html - html for starship game.  See js/starship.js for the
    game code.
@@ -53,8 +53,6 @@
 
     <!-- Preload audio -->
     <!-- See sounds/attrib.txt -->
-    <!-- Put sound effect and other short audio in starship.appcache
-    so browsers cache it properly -->
     <audio class="sound" id="bullet_shot" src="sounds/74395__Benboncan__Ricochet_3.wav" preload="auto"></audio>
     <audio class="sound" id="shatter" src="sounds/41348__datasoundsample__glass_shatter.wav" preload="auto"></audio>
     <!-- Done preloading audio -->
